@@ -35,3 +35,4 @@ Changes by ngdeleito (see git history for the full details)
 - added focusLocationBar action
 - removed ability to open menu only on drag
 - removed the omit tooltips delay option
+- removed support for upgrading from versions prior to 4.3.2
